--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Vibexel</string>
+    <string name="unsplash_access_key">Z74lgJUMfOoTDEVIW-nVuQ12m3vjWALKTHUeC8tC1Ho</string>
+    <string name="unsplash_secret_key">nco37vbzRQwWFe0II8kLCWoYOgdTD3QWyVzHaQ-8uI0</string>
+
 </resources>
